# payload_resources

coldencryptor/: coldencryptor_linux.cs
dllsideload/: README.md  defgen.py  mpclient.def  payload.cpp  printui.def  wshelper.def
dllsideload/frida/: loadlibrary.js  sure.js
frozencryptor/: Cargo.toml  prepare_directory.rs
