[package]
name = "frozencryptor"
version = "1.0.0"
edition = "2021"

[dependencies]
walkdir = "2.5.0"
aes-gcm = "0.10.3"
hex = "0.4.3"
base64 = "0.22.1"
dirs = "6.0.0"
crossbeam = "0.8.4"
rayon = "1.11.0"
rand = {features = ["thread_rng"], version = "0.9.2"}

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
windows = {version="0.62.2",features=["Win32_UI_Shell"]}
